# ft-hackathon-python-team

./: .env  .gitignore  CODE_OF_CONDUCT.md  README.md  requirements.txt  setup.cfg
docs/: conf.py
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  writing_sphinx_documentation.md
docs/user_guide/: README.md
src/hackathon/: main.py  oop_attempt.py  quit_wordle.py  run_pipeline.py  sample_ui.py  sample_ui_test.py  words.py
src/hackathon/utils/: appearance.py  constants.py  focus.py  help.py  in_work_mode.py  keyboard.py  letterbox.py  logic.py  mainframe.py  options.py  quit.py  scaling.py  slide_panel.py  wordle.py  words.py
tests/: test_example_module.py  test_logic.py  test_words.py
words/: word_list.txt
